--- a/commands-bukkit/build.gradle
+++ b/commands-bukkit/build.gradle
@@ -1,13 +1,34 @@
 plugins {
-    id "java"
+    id 'java-library'
+    id 'maven-publish'
 }
 
 dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
 
-    implementation project(":api")
+    api project(":api")
     compileOnly files("libs/spigot-1.13.2.jar")
+}
+
+task sourcesJar(type: Jar, dependsOn: classes) {
+    from sourceSets.main.allSource
+    archiveClassifier = 'sources'
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    from javadoc.destinationDir
+    archiveClassifier = 'javadoc'
+}
+
+publishing {
+    publications {
+        maven(MavenPublication) {
+            from components.java
+            artifact javadocJar
+            artifact sourcesJar
+        }
+    }
 }
 
 test {
